fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 .textbox {
-	outline: 1px solid #cccccc !important;
+	outline: 1px solid #ccc !important;
 	margin-top: 35px;
 	padding: 32px;
 	padding-top: 24px;
